// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput - 快照测试 完全配置快照 1`] = `
<div>
  <div
    class="password-input-wrapper"
  >
    <div
      class="relative"
    >
      <div
        class="input-wrapper"
      >
        <label
          class="input-label"
          for="input-密码"
        >
          密码
        </label>
        <input
          aria-invalid="true"
          class="input input-error pr-10 custom-password-input"
          id="input-密码"
          name="password"
          placeholder="请输入密码"
          required=""
          type="password"
          value=""
        />
        <span
          class="input-error-text"
        >
          密码太短
        </span>
      </div>
      <button
        aria-label="显示密码"
        class="absolute right-3 top-[1.625rem] text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-primary-500/50 rounded transition-colors"
        tabindex="-1"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput - 快照测试 带强度指示器快照 1`] = `
<div>
  <div
    class="password-input-wrapper"
  >
    <div
      class="relative"
    >
      <div
        class="input-wrapper"
      >
        <input
          aria-invalid="false"
          class="input pr-10"
          type="password"
          value=""
        />
      </div>
      <button
        aria-label="显示密码"
        class="absolute right-3 top-[1.625rem] text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-primary-500/50 rounded transition-colors"
        tabindex="-1"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput - 快照测试 带错误状态快照 1`] = `
<div>
  <div
    class="password-input-wrapper"
  >
    <div
      class="relative"
    >
      <div
        class="input-wrapper"
      >
        <input
          aria-invalid="true"
          class="input input-error pr-10"
          type="password"
          value=""
        />
        <span
          class="input-error-text"
        >
          密码错误
        </span>
      </div>
      <button
        aria-label="显示密码"
        class="absolute right-3 top-[1.625rem] text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-primary-500/50 rounded transition-colors"
        tabindex="-1"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput - 快照测试 显示状态快照 1`] = `
<div>
  <div
    class="password-input-wrapper"
  >
    <div
      class="relative"
    >
      <div
        class="input-wrapper"
      >
        <input
          aria-invalid="false"
          class="input pr-10"
          type="text"
          value=""
        />
      </div>
      <button
        aria-label="隐藏密码"
        class="absolute right-3 top-[1.625rem] text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-primary-500/50 rounded transition-colors"
        tabindex="-1"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput - 快照测试 默认状态快照 1`] = `
<div>
  <div
    class="password-input-wrapper"
  >
    <div
      class="relative"
    >
      <div
        class="input-wrapper"
      >
        <input
          aria-invalid="false"
          class="input pr-10"
          type="password"
          value=""
        />
      </div>
      <button
        aria-label="显示密码"
        class="absolute right-3 top-[1.625rem] text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-primary-500/50 rounded transition-colors"
        tabindex="-1"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
